Bug 465381 - "os integration new mail hooks don't get notifications if biff hasn't cleared" [r=bienvenu,sr=Standard8]